Add categories to notes

--- a/LLMs/graphrag_from_microsoft.ipynb
+++ b/LLMs/graphrag_from_microsoft.ipynb
@@ -16,6 +16,7 @@
     "description: \"Using Microsoft's GraphRAG library for RAG\"\n",
     "type: technical_note\n",
     "draft: true\n",
+    "categories: [\"LLM\"]\n",
     "---"
    ]
   },
