--- a/data_science_engineering/data_manipulation/Generate_Fake_Fata_with_Faker.ipynb
+++ b/data_science_engineering/data_manipulation/Generate_Fake_Fata_with_Faker.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "raw",
    "id": "fc2f4332",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "---\n",
     "title: \"Create Fake Data with Faker\"\n",
@@ -12,6 +16,7 @@
     "description: \"How to create fake data using the Python library, Faker\"\n",
     "type: technical_note\n",
     "draft: false\n",
+    "categories: [\"Data engineering\"]\n",
     "---"
    ]
   },
