--- a/data_science_engineering/data_manipulation/Pytest_to_Test_Python_Code.ipynb
+++ b/data_science_engineering/data_manipulation/Pytest_to_Test_Python_Code.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "raw",
    "id": "a3a5b78f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "---\n",
     "title: \"Pytest for testing\"\n",
@@ -12,6 +16,7 @@
     "description: \"How you can use Pytest to test your Python code\"\n",
     "type: technical_note\n",
     "draft: false\n",
+    "categories: [\"Data engineering\"]\n",
     "---"
    ]
   },
