--- a/data_science_engineering/setup/Build_a_Python_Package_Locally.ipynb
+++ b/data_science_engineering/setup/Build_a_Python_Package_Locally.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "raw",
    "id": "coordinate-button",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "---\n",
     "title: \"Build a local Python package\"\n",
@@ -12,6 +16,7 @@
     "description: \"Build a local Python package\"\n",
     "type: technical_note\n",
     "draft: false\n",
+    "categories: [\"Data engineering\"]\n",
     "---"
    ]
   },
