--- a/data_science_engineering/setup/Connect_Google_VM_to_VS_Code.ipynb
+++ b/data_science_engineering/setup/Connect_Google_VM_to_VS_Code.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "raw",
    "id": "modular-miller",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "---\n",
     "title: \"Connect Google VM to VS Code\"\n",
@@ -12,6 +16,7 @@
     "description: \"How to connect a Google Vm to VS Code\"\n",
     "type: technical_note\n",
     "draft: false\n",
+    "categories: [\"Data engineering\"]\n",
     "---"
    ]
   },
