--- a/data_science_engineering/setup/Install_Python_3_on_Ubuntu.ipynb
+++ b/data_science_engineering/setup/Install_Python_3_on_Ubuntu.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "raw",
    "id": "severe-habitat",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "---\n",
     "title: \"Install Python 3 on Ubuntu\"\n",
@@ -12,6 +16,7 @@
     "description: \"Steps to install Python3.7 on an Ubuntu machine.\"\n",
     "type: technical_note\n",
     "draft: false\n",
+    "categories: [\"Data engineering\"]\n",
     "---"
    ]
   },
