--- a/data_science_engineering/setup/Open_Jupyter_Lab_in_a_Google_Cloud_VM.ipynb
+++ b/data_science_engineering/setup/Open_Jupyter_Lab_in_a_Google_Cloud_VM.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "raw",
    "id": "entire-desert",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "---\n",
     "title: \"Open Jupyter Lab on Google Cloud VM\"\n",
@@ -12,6 +16,7 @@
     "description: \"How to open a Jupyter Lab or Juyter Notebook on a Google Cloud Machine\"\n",
     "type: technical_note\n",
     "draft: false\n",
+    "categories: [\"Data engineering\"]\n",
     "---"
    ]
   },
