--- a/data_visualization/charts/Interactive_Pivot_Table_in_Jupyter_Notebook.ipynb
+++ b/data_visualization/charts/Interactive_Pivot_Table_in_Jupyter_Notebook.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "raw",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "---\n",
     "title: \"Interactive Pivot Table in Jupyter Notebook\"\n",
@@ -11,6 +15,7 @@
     "description: \"Add Padding Around String Using Python.\"\n",
     "type: technical_note\n",
     "draft: false\n",
+    "categories: [\"Data visualization\"]\n",
     "---"
    ]
   },
