--- a/traditional_ml/applied_ml/Extractive_Question_Answering_with_Hugging_Face.ipynb
+++ b/traditional_ml/applied_ml/Extractive_Question_Answering_with_Hugging_Face.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "raw",
    "id": "bed8a435",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "---\n",
     "title: \"Using Huggingface for Extractive Q&A\"\n",
@@ -12,6 +16,7 @@
     "description: \"How to use HuggingFace to build your own Q&A feature\"\n",
     "type: technical_note\n",
     "draft: false\n",
+    "categories: [\"ML\"]\n",
     "---"
    ]
   },
