--- a/traditional_ml/applied_ml/Object_Detection_with_Hugging_Face_Transformers.ipynb
+++ b/traditional_ml/applied_ml/Object_Detection_with_Hugging_Face_Transformers.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "raw",
    "id": "bed8a435",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "---\n",
     "title: \"Object Detection with Hugging Face Transformers\"\n",
@@ -12,6 +16,7 @@
     "description: \"How to use HuggingFace Transformers to build your own object detection\"\n",
     "type: technical_note\n",
     "draft: false\n",
+    "categories: [\"ML\"]\n",
     "---"
    ]
   },
@@ -37,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a1a6ad70",
    "metadata": {},
    "outputs": [
