--- a/traditional_ml/applied_ml/QnA_on_Tabular_Data.ipynb
+++ b/traditional_ml/applied_ml/QnA_on_Tabular_Data.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "raw",
    "id": "9266df3f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "---\n",
     "title: \"Q&A on Tabular Data with Huggingface\"\n",
@@ -12,6 +16,7 @@
     "description: \"How to get answers to natural language questions with Huggingface\"\n",
     "type: technical_note\n",
     "draft: false\n",
+    "categories: [\"ML\"]\n",
     "---"
    ]
   },
