--- a/traditional_ml/mlops/Using_FastAPI_to_Deploy_ML_Code.ipynb
+++ b/traditional_ml/mlops/Using_FastAPI_to_Deploy_ML_Code.ipynb
@@ -7,7 +7,10 @@
     "slideshow": {
      "slide_type": "skip"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "raw"
+    }
    },
    "source": [
     "---\n",
@@ -17,28 +20,8 @@
     "description: \"Notes on using FastAPI as I go through the online documentation\"\n",
     "type: technical_note\n",
     "draft: false\n",
+    "categories: [\"MLOps\"]\n",
     "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cb350eae",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "<h1><center>Using FastAPI to Deploy ML Models</center></h1>\n",
-    "<center><h4>Notes on using FastAPI as I go through the online documentation</h4></center>\n",
-    "\n",
-    "<br>\n",
-    "<br>\n",
-    "\n",
-    "Kedar Dabhadkar <br>\n",
-    "Data Scientist<br>\n",
-    "linkedin.com/in/dkedar7"
    ]
   },
   {
@@ -53,7 +36,7 @@
    "source": [
     "## What is FastAPI?\n",
     "\n",
-    "- This is what FastAPI is"
+    "- FastAPI is a Python web framework that helps developers create APIs (Application Programming Interfaces). It's known for its speed and ease of use. Read more at https://fastapi.tiangolo.com/."
    ]
   },
   {
@@ -1126,32 +1109,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c9f714bb-5b48-4381-a1c7-314aeaba30ec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4d989bf5-67ab-4662-a825-bdc9baad2dbb",
-   "metadata": {},
-   "source": [
-    "## 19. Handling Errors\n",
-    "\n",
-    "- "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85953cbc-5e32-4410-8ee4-b37b577dce51",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0810ddc9-2844-4db1-9c9d-34f58f27e89f",
    "metadata": {},
    "outputs": [],
    "source": []
